# nu_plugin_nickel

./: .gitignore  Cargo.toml
examples/: cargo-eval.ncl  contracts.ncl  record-contract.ncl
examples/workspace-crate/: Cargo.toml
src/: cache.rs  lib.rs  main.rs
src/nickel/: mod.rs
src/nickel/command/: mod.rs
src/nickel/command/core/: eval.rs  mod.rs  parse.rs  tests.rs
src/nickel/values/: mod.rs
src/nickel/values/nu_nickel_value/: custom_value.rs  mod.rs
